--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon src/app.js",
-    "start": "node src/app.js"
+    "dev": "NODE_ENV=development nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
