--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "nodemon": "^3.1.9",
     "pg": "^8.16.3",
+    "sharp": "^0.34.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
